[package]
name = "airquality"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
atomic_float = "0.1.0"
ctrlc = "3.4.4"
libc = "0.2.153"
prometheus-client = "0.22.2"
tide = "0.16.0"
